contact page experiment

--- a/src/mysite/templates/mysite/base.html
+++ b/src/mysite/templates/mysite/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--    scratch css -->
-    <link rel="stylesheet" href="{% static 'mysite/style.css' %}">
+    <link rel="stylesheet" href="{% static 'mysite/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'mysite/css/contact.css' %}">
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
