--- a/src/mysite/templates/mysite/contact.html
+++ b/src/mysite/templates/mysite/contact.html
@@ -4,8 +4,57 @@
 {% block title %} Contact {% endblock %}
 
 
-
 {% block body %}
 
-<h3>CONTACT PAGE</h3>
+<div class="row mx-auto" style="margin-top: 70px">
+    <div class="page-title text-uppercase col-sm-12">
+        <h2>Get in <span class="primary">touch</span> <span class="title-bg">Contact</span></h2>
+
+    </div>
+</div>
+
+
+<div class="row mx-auto">
+    <div class="col-sm-5" style="margin-top: 70px">
+
+        <h4>Email</h4>
+        <p><a href="mailto:my_name@gmail.com">my_name@gmail.com</a></p>
+
+        <h4>Phone</h4>
+        <p><a href="tel:+000-1111-2222">+000-1111-2222</a></p>
+
+    </div>
+    <!--form-->
+    <div class="col-sm-7" style="margin-top: 70px">
+
+
+        <form>
+            {% csrf_token %}
+            <div class="form-group row">
+                <label for="example-email-input" class="col-2 col-form-label">Email</label>
+                <div class="col-10">
+                    <input name='email' class="form-control" type="email" id="example-email-input">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="example-email-input" class="col-2 col-form-label">Subject</label>
+                <div class="col-10">
+                    <input name='subject' class="form-control" type="text">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="example-email-input" class="col-2 col-form-label">Message</label>
+                <div class="col-10">
+                    <textarea name='message' class="form-control"></textarea>
+                </div>
+            </div>
+            <div class="pull-right">
+                <button type="submit" class="btn btn-primary float-right">Submit</button>
+            </div>
+
+        </form>
+
+    </div>
+</div>
+
 {% endblock %}
